--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-libmm-sound (0.5.9-0) unstable; urgency=low
+libmm-sound (0.5.11-0) unstable; urgency=low
 
   * Initial release
   * Git: pkgs/l/libmm-sound
-  * Tag: libmm-sound_0.5.9-0
+  * Tag: libmm-sound_0.5.11-0
 
- -- Seungbae Shin <seungbae.shin@samsung.com>  Wed, 08 Feb 2012 15:27:29 +0900
+ -- YoungHun Kim <yh8004.kim@samsung.com>  Fri, 10 Feb 2012 14:31:26 +0900
